@@ -1,15 +1,18 @@
 .*.sw?
 .yardoc
-dist
-/pkg
-/spec/fixtures
-/spec/rp_env
-!/spec/hieradata/default.yaml
-!/spec/fixtures/site.pp
-/.rspec_system
-/.vagrant
-/.bundle
-/Gemfile.lock
-/vendor
-/junit
-/log
+dist/
+pkg/
+spec/fixtures/*
+!spec/fixtures/hieradata/
+!spec/fixtures/hieradata/*
+spec/fixtures/hieradata/hiera.yaml
+spec/rp_env/
+.rspec_system
+.vagrant/
+.bundle/
+Gemfile.lock
+vendor/
+junit/
+log/
+doc/
+.idea/
